--- a/package.json
+++ b/package.json
@@ -1,38 +1,34 @@
 {
   "private": true,
   "type": "module",
-  "name": "empty-project",
-  "version": "0.1.7",
-  "description": "Repo Template: vite, vitest, eslint.",
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "files": [
-    "dist"
+  "name": "@screenlayer/monorepo",
+  "version": "0.0.1",
+  "description": "2D Rendering Layer for the Web",
+  "workspaces": [
+    "packages/*"
   ],
   "engines": {
-    "node": ">=18.16.1"
+    "node": ">=18.17.1"
   },
-  "packageManager": "npm@9.6.2",
+  "packageManager": "npm@9.8.1",
   "browserslist": "Chrome >= 112, ChromeAndroid >= 112, Edge >= 112, Firefox >= 112, FirefoxAndroid  >= 112,  Safari >= 16.4, iOS >= 16.4, not dead",
   "scripts": {
     "dev": "vite",
-    "dev-host": "vite --host",
     "build": "vite build --emptyOutDir",
-    "preview": "vite preview",
-    "preview-host": "vite preview --host",
     "start": "vite --open",
     "lint": "eslint --ext .js --report-unused-disable-directives --env-info .",
     "test": "vitest run",
     "test-watch": "vitest",
-    "test-coverage": "vitest run --coverage"
+    "test-coverage": "vitest run --coverage",
+    "format": "prettier --write --cache \"**/*.[tj]s?(x)\"",
+    "format-check": "prettier --check --cache \"**/*.[tj]s?(x)\""
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^0.34.1",
-    "@vitest/web-worker": "^0.34.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "jsdom": "^22.1.0",
+    "prettier": "^3.0.1",
     "vite": "^4.4.9",
     "vitest": "^0.34.1"
   }
