--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "files.trimTrailingWhitespace": false
   },
   "cSpell.words": [
+    "behavior",
     "convertacolor",
     "screenlayer"
   ]
