--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,11 @@ name: CI
 
 on:
   workflow_dispatch:
+
   push:
     branches: ['main']
     paths-ignore: ['README.md', 'LICENSE', '.vscode/**']
+
   pull_request:
     branches: ['main']
     paths-ignore: ['README.md', 'LICENSE', '.vscode/**']
@@ -19,25 +21,31 @@ concurrency:
   group: ci-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 env:
   VITEST_SEGFAULT_RETRY: 3
   NODE_OPTIONS: --max-old-space-size=4096
 
 jobs:
-  ci-on-node:
+  continuous-integration:
     runs-on: ubuntu-latest
 
     timeout-minutes: 10
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 50
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
