--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "private": true,
   "type": "module",
   "name": "@screenlayer/monorepo",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "packageManager": "npm@10.2.2",
   "workspaces": [
     "packages/*"
   ],
   "browserslist": "Chrome >= 112, ChromeAndroid >= 112, Edge >= 112, Firefox >= 112, FirefoxAndroid  >= 112,  Safari >= 16.4, iOS >= 16.4, not dead",
+  "eslintConfig": {
+    "root": true,
+    "extends": "@epreston/eslint-config"
+  },
+  "prettier": "@epreston/prettier-config",
   "scripts": {
     "dev": "vite",
     "build": "vite build --emptyOutDir",
@@ -16,14 +21,15 @@
     "test": "vitest run",
     "test-watch": "vitest",
     "test-coverage": "vitest run --coverage",
-    "format": "prettier --write --cache \"**/*.[tj]s?(x)\"",
-    "format-check": "prettier --check --cache \"**/*.[tj]s?(x)\""
+    "format": "prettier --check --cache \"**/*.[tj]s?(x)\"",
+    "format-fix": "prettier --write --cache \"**/*.[tj]s?(x)\""
   },
   "devDependencies": {
+    "@epreston/eslint-config": "^1.1.0",
+    "@epreston/prettier-config": "^1.0.0",
     "@epreston/tsconfig": "^1.0.1",
     "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.53.0",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "vite": "^4.5.0",
