--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "outDir": "temp"
   },
   "include": [
+    "src",
+    "test",
     "packages/global.d.ts",
     "packages/*/src",
     "packages/*/tests",
