add package build system

--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   },
   "prettier": "@epreston/prettier-config",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --emptyOutDir",
     "start": "vite --open",
+    "dev": "vite",
+    "build": "node scripts/build.js",
+    "check-types": "tsc --project tsconfig.json --incremental --allowJs --checkJs --noEmit",
+    "clean": "rimraf -g packages/*/dist temp .eslintcache",
     "lint": "eslint --ext .js --report-unused-disable-directives .",
     "test": "vitest run",
     "test-watch": "vitest",
-    "test-coverage": "vitest run --coverage",
+    "test-coverage": "vitest run --coverage.enabled",
     "format": "prettier --check --cache \"**/*.[tj]s?(x)\"",
     "format-fix": "prettier --write --cache \"**/*.[tj]s?(x)\""
   },
@@ -28,10 +30,21 @@
     "@epreston/eslint-config": "^1.1.0",
     "@epreston/prettier-config": "^2.0.0",
     "@epreston/tsconfig": "^1.0.1",
+    "@rollup/plugin-alias": "^5.0.1",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-terser": "^0.4.4",
     "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.53.0",
+    "execa": "^8.0.1",
     "jsdom": "^22.1.0",
+    "minimist": "^1.2.8",
+    "picocolors": "^1.0.0",
     "prettier": "^3.1.0",
+    "pretty-bytes": "^6.1.1",
+    "rimraf": "^5.0.5",
+    "rollup-plugin-esbuild": "^6.1.0",
+    "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
   },
