--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,7 +20,10 @@
     "directory": "packages/components"
   },
   "keywords": [
-    "vue3","components", "screenlayer", "2D"
+    "screenlayer",
+    "2D",
+    "vue3",
+    "components"
   ],
   "author": "Ed Preston",
   "license": "MIT",
