--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.3",
   "packageManager": "npm@10.2.3",
   "workspaces": [
+    "apps/*",
     "packages/*"
   ],
   "browserslist": "Chrome >= 112, ChromeAndroid >= 112, Edge >= 112, Firefox >= 112, FirefoxAndroid  >= 112,  Safari >= 16.4, iOS >= 16.4, not dead",
