--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "apps/*",
     "packages/*"
   ],
-  "browserslist": "Chrome >= 112, ChromeAndroid >= 112, Edge >= 112, Firefox >= 112, FirefoxAndroid  >= 112,  Safari >= 16.4, iOS >= 16.4, not dead",
+  "browserslist": [
+    "Chrome >= 112",
+    "ChromeAndroid >= 112",
+    "Edge >= 112",
+    "Firefox >= 112",
+    "FirefoxAndroid >= 112",
+    "Safari >= 16.4",
+    "iOS >= 16.4",
+    "not dead"
+  ],
   "eslintConfig": {
     "root": true,
     "extends": "@epreston/eslint-config"
