--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "node scripts/build.js",
     "check-types": "tsc --project tsconfig.json --incremental --allowJs --checkJs --noEmit",
     "clean": "rimraf -g packages/*/dist temp .eslintcache",
-    "lint": "eslint --ext .js --report-unused-disable-directives .",
+    "lint": "eslint --ext .vue,.js,.jsx,.cjs,.mjs --report-unused-disable-directives .",
     "test": "vitest run",
     "test-watch": "vitest",
     "test-coverage": "vitest run --coverage.enabled",
