--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "vue.volar"
+    "vue.volar",
+    "vue.vscode-typescript-vue-plugin"
   ]
 }
