--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,17 +29,10 @@
   "[markdown]": {
     "files.trimTrailingWhitespace": false
   },
-  "cSpell.words": [
-    "behavior",
-    "convertacolor",
-    "picocolors",
-    "pinia",
-    "screenlayer"
-  ],
-  "cSpell.ignoreWords": [
-    "autodocs",
-    "epreston",
-    "execa",
-    "iife"
-  ]
+  "emmet.includeLanguages": {
+    "vue-html": "html",
+    "vue": "html"
+  },
+  "cSpell.words": ["behavior", "convertacolor", "picocolors", "pinia", "screenlayer", "taskbox"],
+  "cSpell.ignoreWords": ["autodocs", "epreston", "execa", "iife"]
 }
