--- a/apps/design/package.json
+++ b/apps/design/package.json
@@ -5,20 +5,14 @@
   "scripts": {
     "dev": "storybook dev --disable-telemetry -p 6006",
     "build": "storybook build",
-    "preview": "vite preview storybook-static",
+    "preview": "vite preview --outDir storybook-static",
     "storybook": "storybook dev --disable-telemetry -p 6006",
     "storybook-docs": "storybook dev --disable-telemetry --docs",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
     "clean": "rimraf -g node_modules"
   },
-  "dependencies": {
-    "@screenlayer/components": "*",
-    "pinia": "^2.1.7",
-    "vue": "^3.3.8"
-  },
   "devDependencies": {
-    "@storybook/addon-a11y": "^7.5.3",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
@@ -26,11 +20,14 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3": "^7.5.3",
     "@storybook/vue3-vite": "^7.5.3",
-    "@vitejs/plugin-vue": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "storybook": "^7.5.3",
     "vite": "^4.5.0"
+  },
+  "dependencies": {
+    "pinia": "^2.1.7",
+    "vue": "^3.3.8"
   }
 }
