--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/epreston/screenlayer/issues"
   },
   "homepage": "https://github.com/epreston/screenlayer/blob/main/packages/components#readme",
-  "dependencies": {
+  "peerDependencies": {
     "vue": "^3.3.8"
   }
 }
