--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test": "vitest run",
     "test-watch": "vitest",
     "test-coverage": "vitest run --coverage.enabled",
-    "format": "prettier --check --cache \"**/*.[tj]s?(x)\"",
-    "format-fix": "prettier --write --cache \"**/*.[tj]s?(x)\"",
+    "format": "prettier --check --cache \"**/*.{?(c|m)[tj]s?(x),vue}\"",
+    "format-fix": "prettier --write --cache \"**/*.{?(c|m)[tj]s?(x),vue}\"",
     "storybook": "cd apps/design && npm run dev"
   },
   "devDependencies": {
