consistent script naming
rename to setup-vitest.js following convention used in other projects.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "packages/global.d.ts",
     "packages/*/src",
     "packages/*/tests",
-    "scripts/vitest-setup.js"
+    "scripts/setup-vitest.js"
   ]
 }
