--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,14 +1,14 @@
 {
+  "type": "module",
+  "sideEffects": false,
   "name": "@screenlayer/components",
   "version": "0.0.1",
   "description": "ScreenLayer vue component library",
-  "type": "module",
   "module": "./dist/components.esm-bundler.js",
   "exports": "./dist/components.esm-bundler.js",
   "files": [
     "dist/**"
   ],
-  "sideEffects": false,
   "buildOptions": {
     "formats": [
       "esm-bundler"
@@ -27,9 +27,7 @@
   ],
   "author": "Ed Preston",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/epreston/screenlayer/issues"
-  },
+  "bugs": "https://github.com/epreston/screenlayer/issues",
   "homepage": "https://github.com/epreston/screenlayer/blob/main/packages/components#readme",
   "peerDependencies": {
     "vue": "^3.4.21"
