--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "prettier": "@epreston/prettier-config",
   "packageManager": "npm@10.7.0",
   "engines": {
-    "node": "^18.19.0 || >=20.11.0"
+    "node": "^18.20.4 || ^20.15.1 || >=22.5.0"
   },
   "scripts": {
     "start": "vite --open",
