--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dev": "vite",
     "build": "node scripts/build.js",
     "check-types": "tsc --project tsconfig.json --incremental --allowJs --checkJs --noEmit",
-    "clean": "rimraf -g packages/*/dist temp .eslintcache",
+    "clean": "rimraf -g -v packages/*/dist temp .eslintcache",
     "lint": "eslint --ext .vue,.js,.jsx,.cjs,.mjs --report-unused-disable-directives .",
     "test": "vitest run",
     "test-watch": "vitest",
