--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
     "packages/*"
   ],
   "browserslist": [
-    "Chrome >= 124",
-    "ChromeAndroid >= 124",
-    "Edge >= 124",
-    "Firefox >= 124",
-    "FirefoxAndroid >= 124",
-    "Safari >= 17.4",
-    "iOS >= 17.4",
-    "not dead"
+    "baseline 2025"
   ],
   "eslintConfig": {
     "root": true,
