--- a/apps/design/package.json
+++ b/apps/design/package.json
@@ -10,7 +10,7 @@
     "storybook-docs": "storybook dev --disable-telemetry --docs",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
-    "clean": "rimraf -g node_modules"
+    "clean": "rimraf -g -v node_modules"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.4.1",
@@ -25,7 +25,7 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
-    "pinia": "^2.2.6",
-    "vue": "^3.5.12"
+    "pinia": "^3.0.4",
+    "vue": "^3.5.26"
   }
 }
